--- a/ice-cream-shop/pom.xml
+++ b/ice-cream-shop/pom.xml
@@ -29,6 +29,18 @@
       <artifactId>lombok</artifactId>
       <version>1.18.38</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.10-FINAL</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.10-FINAL</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>ice-cream-shop</finalName>
